--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "form-inputs-react",
   "version": "1.0.0",
   "description": "reusable form input components",
-  "main": "src/index.js",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^17.0.2",
     "styled-components": "^5.3.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5"
   }
 }
